# tiersortierer

./: Cargo.toml  README.md  build.rs  config.toml.sample  sqlx-data.json  tiersortierer_datenbank.sql
migrations/: 20211127150628_create_db.sql  20211127182815_add_user_table.sql  20211127182837_add_user_creator_to_animal.sql  20211202105749_add_user_creation_and_last_login_date.sql  20211204214813_add_token_table.sql  20211206193121_add_is_admin.sql  20211208102152_add_token_idx.sql
src/: config.rs  main.rs  util.rs
src/endpoints/: user.rs
src/endpoints/admin/: mod.rs  test.rs  user.rs
src/model/: admin_auth_middleware.rs  mod.rs  token.rs  user.rs
