[package]
name = "tiersortierer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.12"
tokio = { version = "1", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.68"
sqlx = { version = "0.5", features = ["runtime-actix-rustls", "postgres", "chrono", "macros", "sqlx-macros", "offline"] }
toml = "0.5"
log = "0.4.14"
simple_logger = "1.11.0"
argon2 = { version = "0.3.1" }
base64 = "0.13.0"
rand = "0.8.4"
futures = "0.3.18"

[profile.production]
inherits = "release"
lto = true
